--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,9 +1,4 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<PageTitle>David Blanchard - davidblanchard84@gmail.com</PageTitle>
+<h1 class="text-center">David Blanchard</h1>
